fixed the low contrast issues

--- a/style.css
+++ b/style.css
@@ -757,7 +757,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(255, 250, 236, 0.43);
     padding: 40px 40px 40px 40px;
 }
 
@@ -779,7 +779,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #212121!important;
 }
 
 .btn-atomic-tangerine {
